--- a/index.html
+++ b/index.html
@@ -8,16 +8,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <canvas></canvas>
-    <input
-      type="range"
-      id="line-width"
-      min="1"
-      max="10"
-      value="5"
-      step="0.5"
-    /><input type="color" id="color" />
-    <div class="">
+    <div class="color-options">
+      <input type="color" id="color" />
       <div
         class="color-option"
         style="background-color: #1abc9c"
@@ -65,11 +57,6 @@
       ></div>
       <div
         class="color-option"
-        style="background-color: #bdc3c7"
-        data-color="#bdc3c7"
-      ></div>
-      <div
-        class="color-option"
         style="background-color: #2ecc71"
         data-color="#2ecc71"
       ></div>
@@ -79,11 +66,28 @@
         data-color="#e67e22"
       ></div>
     </div>
-    <button id="mode-btn">Fill</button>
-    <button id="destroy-btn">Destroy</button>
-    <button id="eraser-btn">Erase</button>
-    <input type="file" accept="image/*" id="file" />
-    <input type="text" id="text" placeholder="Write and then double click" />
+    <canvas></canvas>
+    <div class="btns">
+      <span>Pencil Width</span>
+      <input
+        type="range"
+        id="line-width"
+        min="1"
+        max="10"
+        value="5"
+        step="0.5"
+      />
+      <button id="mode-btn">🩸 Fill</button>
+      <button id="destroy-btn">💣 Destroy</button>
+      <button id="eraser-btn">❌ Erase</button>
+      <label for="file"
+        >💾 Add Photo
+        <input type="file" accept="image/*" id="file" />
+      </label>
+
+      <input type="text" id="text" placeholder="Add text here...:)" />
+      <button id="save">🖼 Save image</button>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
